<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MyTestApp</string>

    <!-- Text for change in screen -->
    <string name="txt_main_layout_first_text">First text</string>
    <string name="txt_main_layout_second_text">Second text</string>
    <string name="txt_main_layout_change_text">Change text</string>

    <!-- Text for examples -->
    <string name="txt_not_translate"><xliff:g id="title" example="5 days">Hello</xliff:g> world
    </string>
    <string name="scroll_for_main_view">scroll for main view</string>
    <string name="mostrar_imagenes_btn">Show\nimages</string>
    <string name="ocultar_imagenes_btn">Hide\nimages</string>
    <string name="mostrar_imagenes">Show images</string>

</resources>